k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podname-service
spec:
  selector:
    app: podname
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
