k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podname-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - podname.dellabeneta.tech
    secretName: podname-tls
  rules:
  - host: podname.dellabeneta.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podname-service
            port:
              number: 80
